add a player object

--- a/MyBreakOut/MyBreakOut.vcxproj
+++ b/MyBreakOut/MyBreakOut.vcxproj
@@ -122,21 +122,24 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\src\Game.h" />
+    <ClInclude Include="..\src\GameLevel.h" />
     <ClInclude Include="..\src\opengl_class\FrameBufferObject.h" />
     <ClInclude Include="..\src\opengl_class\RenderBuffer.h" />
     <ClInclude Include="..\src\opengl_class\shader.h" />
     <ClInclude Include="..\src\opengl_class\TextureBuffer.h" />
     <ClInclude Include="..\src\opengl_class\VertexArray.h" />
+    <ClInclude Include="..\src\Player.h" />
     <ClInclude Include="..\src\Resources\Mesh.h" />
     <ClInclude Include="..\src\Resources\ResourceManager.h" />
     <ClInclude Include="..\src\Resources\Texture.h" />
     <ClInclude Include="..\src\Scene\Scene.h" />
-    <ClInclude Include="..\src\Scene\SceneObeject.h" />
+    <ClInclude Include="..\src\Scene\Obeject.h" />
     <ClInclude Include="..\src\SpriteObject.h" />
     <ClInclude Include="..\src\window\Window.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\Game.cpp" />
+    <ClCompile Include="..\src\GameLevel.cpp" />
     <ClCompile Include="..\src\glad.c" />
     <ClCompile Include="..\src\main.cpp" />
     <ClCompile Include="..\src\opengl_class\FrameBufferObject.cpp" />
@@ -144,11 +147,12 @@
     <ClCompile Include="..\src\opengl_class\shader.cpp" />
     <ClCompile Include="..\src\opengl_class\TextureBuffer.cpp" />
     <ClCompile Include="..\src\opengl_class\VertexArray.cpp" />
+    <ClCompile Include="..\src\Player.cpp" />
     <ClCompile Include="..\src\Resources\Mesh.cpp" />
     <ClCompile Include="..\src\Resources\ResourceManager.cpp" />
     <ClCompile Include="..\src\Resources\Texture.cpp" />
     <ClCompile Include="..\src\Scene\Scene.cpp" />
-    <ClCompile Include="..\src\Scene\SceneObeject.cpp" />
+    <ClCompile Include="..\src\Scene\Obeject.cpp" />
     <ClCompile Include="..\src\SpriteObject.cpp" />
     <ClCompile Include="..\src\stb_image.cpp" />
     <ClCompile Include="..\src\window\Window.cpp" />
