--- a/MyBreakOut/MyBreakOut.vcxproj
+++ b/MyBreakOut/MyBreakOut.vcxproj
@@ -121,6 +121,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\src\Ball.h" />
     <ClInclude Include="..\src\Game.h" />
     <ClInclude Include="..\src\GameLevel.h" />
     <ClInclude Include="..\src\opengl_class\FrameBufferObject.h" />
@@ -138,6 +139,7 @@
     <ClInclude Include="..\src\window\Window.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\Ball.cpp" />
     <ClCompile Include="..\src\Game.cpp" />
     <ClCompile Include="..\src\GameLevel.cpp" />
     <ClCompile Include="..\src\glad.c" />
